@@ -21,6 +21,8 @@ commands= py.test --genscript=pytest1
 changedir=.
 basepython=python2.7
 deps=pytest-xdist
+    :pypi:mock
+    :pypi:nose
 commands=
   py.test -n3 -rfsxX \
         --junitxml={envlogdir}/junit-{envname}.xml testing
