@@ -24,6 +24,9 @@ Changes between 2.3.2 and 2.3.3.dev
 - in tracebacks *,** arg values are now shown next to normal arguments
   (thanks Manuel Jacob)
 
+- fix issue217 - support mock.patch with pytest's fixtures - note that
+  you need either mock-1.0.1 or the python3.3 builtin unittest.mock.
+
 Changes between 2.3.1 and 2.3.2
 -----------------------------------
 
